--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +20,12 @@
     "express-socket.io-session": "^1.3.5",
     "local": "^0.3.3",
     "mongoose": "^5.11.18",
-    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "socket.io": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
